<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal">
        </EditText>

        <TextView
            android:id="@+id/textViewSelectedCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"
            android:gravity="center"
            android:visibility="gone">
        </TextView>

        <TextView
            android:id="@+id/textViewSelectedPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone">
        </TextView>

        <ImageView
            android:id="@+id/imageViewSelectedItem"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:visibility="gone">
        </ImageView>

        <EditText
            android:id="@+id/editTextQuantity"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:visibility="gone">
        </EditText>

        <Button
            android:id="@+id/buttonConfirmQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_spinner"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:visibility="gone">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_blades"
            android:textStyle="bold"
            android:layout_marginTop="16dp">
        </TextView>

        <Spinner
            android:id="@+id/spinnerDeski"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_tables"
            android:textStyle="bold"
            android:layout_marginTop="16dp">
        </TextView>

        <Spinner
            android:id="@+id/spinnerStoly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_rubbers"
            android:textStyle="bold"
            android:layout_marginTop="16dp">
        </TextView>

        <Spinner
            android:id="@+id/spinnerOkladziny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_shoes"
            android:textStyle="bold"
            android:layout_marginTop="16dp">
        </TextView>

        <Spinner
            android:id="@+id/spinnerButy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
        </Spinner>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp">
        </EditText>

        <TextView
            android:id="@+id/textViewTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="30dp"
            android:text="@string/total_price"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>

        <Button
            android:id="@+id/buttonSendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send_email"
            android:layout_gravity="center">
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save_order"
            android:onClick="saveOrder"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal">
        </Button>
    </LinearLayout>
</ScrollView>
